--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BenzeneCoin">
         <activity
+            android:name=".amount_entry"
+            android:exported="false" />
+        <activity
+            android:name=".transaction_activity_2"
+            android:exported="false" />
+        <activity
             android:name=".transaction_activity"
             android:exported="false" />
         <activity
