--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.web3j:core:4.8.7-android'
     implementation "androidx.cardview:cardview:1.0.0"
-    def lottieVersion = "5.0.3"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "com.airbnb.android:lottie:5.0.3"
     implementation 'com.google.android.material:material:<1.7.0-alpha01>'
 }
