--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -42,6 +46,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.web3j:core:4.8.7-android'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.gms:play-services-nearby:18.1.0'
     implementation "com.airbnb.android:lottie:5.0.3"
     implementation 'com.google.android.material:material:<1.7.0-alpha01>'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.karumi:dexter:6.2.3'
 }
