buy_benzeneCoin activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BenzeneCoin">
         <activity
+            android:name=".buy_benzenecoin"
+            android:exported="false" />
+        <activity
             android:name=".send"
             android:exported="false" />
         <activity
