--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
 
-    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
@@ -45,7 +45,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'org.web3j:core:4.8.7-android'
+    implementation("com.android.volley:volley:1.2.1")
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.android.gms:play-services-nearby:18.1.0'
     implementation "com.airbnb.android:lottie:5.0.3"
